[gd_scene load_steps=12 format=2]

[ext_resource path="res://objects/PlayerBoat.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Score.gd" type="Script" id=2]
[ext_resource path="res://assets/oceanSurface.jpg" type="Texture" id=3]
[ext_resource path="res://scenes/OilSpawner.gd" type="Script" id=4]
[ext_resource path="res://objects/Oil.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/white.jpg" type="Texture" id=6]
[ext_resource path="res://scenes/Sprite.gd" type="Script" id=7]
[ext_resource path="res://scenes/Text.gd" type="Script" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 639.34, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 411.337 )

[sub_resource type="Theme" id=3]

[node name="Level" type="Node2D"]

[node name="PlayerBoat" parent="." instance=ExtResource( 1 )]

[node name="OceanLayer" type="Sprite" parent="."]
position = Vector2( 510.671, 301.819 )
scale = Vector2( 0.556221, 0.329342 )
z_index = -1
texture = ExtResource( 3 )

[node name="OilSpawner" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="OilSpawnTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Oil" parent="." instance=ExtResource( 5 )]
position = Vector2( -100, -100 )

[node name="TopWall" type="StaticBody2D" parent="."]
position = Vector2( 500, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopWall"]
shape = SubResource( 1 )

[node name="RightWall" type="StaticBody2D" parent="."]
position = Vector2( 0, 300 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightWall"]
shape = SubResource( 2 )

[node name="LeftWall" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftWall"]
position = Vector2( 1030, 300 )
shape = SubResource( 2 )

[node name="BottomWall" type="StaticBody2D" parent="."]
position = Vector2( 500, 600 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomWall"]
shape = SubResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="Score" type="Label" parent="CanvasLayer"]
margin_left = 3.0
margin_top = 4.0
margin_right = 83.0
margin_bottom = 42.0
rect_scale = Vector2( 3, 3 )
theme = SubResource( 3 )
custom_colors/font_color = Color( 0.101961, 0.34902, 0.85098, 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="CanvasLayer"]
position = Vector2( 121.424, 35.9642 )
scale = Vector2( 1.12351, 0.344675 )
z_index = -1
texture = ExtResource( 6 )
script = ExtResource( 7 )

[node name="Text" type="CanvasLayer" parent="."]
script = ExtResource( 8 )

[node name="RichTextLabel" type="RichTextLabel" parent="Text"]
anchor_left = 0.261
anchor_top = 0.134
anchor_right = 0.679
anchor_bottom = 0.81
margin_left = -149.264
margin_top = -0.400002
margin_right = -9.29602
margin_bottom = -137.0
rect_scale = Vector2( 1.5, 1.5 )
size_flags_stretch_ratio = 2.45
custom_colors/default_color = Color( 0.0980392, 0.321569, 0.831373, 1 )
text = "Usted es un barco de limpieza encargado de
eliminar el desperdicio y derrames de petróleo del océano.
Proteges la flora silvestre y la fauna silvestre en la
naturaleza.
El barco es un vehículo eléctrico y no produce
productos químicos dañinos, por lo que es
perfecto para limpiar el océano.
Hay muchas especies en peligro de extinción,
tanto en tierra como en el océano. Al limpiar el
océano, proteges un recurso natural importante.
Es importante que toda la población de seres
humanos haga una diferencia en el mundo
mediante el reciclaje, como el cartón, el plástico y
el vidrio.
Limpie los derrames de petróleo pasando su barco
sobre ellos, si hay demasiados en el agua, ¡pierde!"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Background" type="Sprite" parent="Text"]
position = Vector2( 546.066, 280.97 )
scale = Vector2( 4.16037, 2.11625 )
z_index = -1
texture = ExtResource( 6 )

[connection signal="add_score" from="PlayerBoat" to="CanvasLayer/Score" method="_on_PlayerBoat_add_score"]
[connection signal="game_over" from="OilSpawner" to="CanvasLayer/Score" method="_on_OilSpawner_game_over"]
[connection signal="game_over" from="OilSpawner" to="CanvasLayer/Background" method="_on_OilSpawner_game_over"]
[connection signal="timeout" from="OilSpawnTimer" to="OilSpawner" method="_on_OilSpawnTimer_timeout"]
[connection signal="start_game" from="Text" to="OilSpawner" method="_on_Text_start_game"]
